--- a/views/admin_dashboard.ejs
+++ b/views/admin_dashboard.ejs
@@ -32,7 +32,7 @@
                <li><a href="/admin/receipts"><i class="fa-solid fa-eye"></i> View Receipts</a></li>
                <li><a href="/admin/estimates"><i class="fa-solid fa-eye"></i> View Estimates</a></li>
                <li><a href="/admin/customers"><i class="fa-solid fa-users"></i> View Customers</a></li>
-               <li><a href="/admin/labs"><i class="fa-solid fa-flask-vial"></i> Manage Labs</a></li>
+               <li><a href="/admin/labs"><i class="fa-solid fa-flask"></i> Manage Labs</a></li>
                <li><a href="/admin/package-lists"><i class="fa-solid fa-list-check"></i> Manage Rate Lists</a></li>
                 <li><a href="/admin/branches"><i class="fa-solid fa-store"></i> Manage Branches</a></li>
                 <li><a href="/admin/users"><i class="fa-solid fa-user-cog"></i> Manage Users</a></li>
