--- a/views/form_estimate.ejs
+++ b/views/form_estimate.ejs
@@ -230,7 +230,7 @@
                     </div>
                     <div>
                         <label for="new_customer_mobile">Mobile No:</label>
-                        <input type="tel" id="new_customer_mobile" name="new_customer_mobile" pattern="[0-9\s+-]*">
+                        <input type="tel" id="new_customer_mobile" name="new_customer_mobile" pattern="[0-9]{10}" maxlength="10" title="Mobile number must be exactly 10 digits.">
                     </div>
                     <div>
                         <label for="new_customer_dob">Date of Birth:</label>
