--- a/views/admin_dashboard.ejs
+++ b/views/admin_dashboard.ejs
@@ -13,6 +13,7 @@
         <div class="dashboard-header">
             <div class="header-top">
                 <h1>Admin Dashboard</h1>
+                <div class="spacer"></div>
                 <% if (sessionUser) { %>
                     <div class="user-badge">
                         <div class="user-name"><i class="fa-solid fa-user-shield"></i> <%= sessionUser.username %></div>
